--- a/WolvenKit/Views/Editor/Basic/ProjectExplorerView.xaml
+++ b/WolvenKit/Views/Editor/Basic/ProjectExplorerView.xaml
@@ -2,7 +2,6 @@
  x:Class="WolvenKit.Views.Editor.ProjectExplorerView"
  xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
  xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
- xmlns:c="clr-namespace:WolvenKit.Functionality.WKitGlobal.Helpers"
  xmlns:catel="http://schemas.catelproject.com"
  xmlns:converters="clr-namespace:WolvenKit.Functionality.Converters;assembly=WolvenKit.App"
  xmlns:converters1="clr-namespace:WolvenKit.Functionality.Converters"
@@ -51,12 +50,13 @@
          ChildPropertyName="ParentHash"
          ColumnSizer="Star"
          ExpandStateMappingName="IsExpanded"
-         LiveNodeUpdateMode="AllowDataShaping"
          ItemsSource="{Binding BindGrid1}"
+         LiveNodeUpdateMode="AllowDataShaping"
          ParentPropertyName="Hash"
          RowHeight="17"
          SelectedItem="{Binding SelectedItem}"
          SelectionChanged="TreeGrid_OnSelectionChanged"
+         SelectionMode="Extended"
          SelfRelationRootValue="0"
          >
 
@@ -802,12 +802,18 @@
 
             <syncfusion:SfTreeGrid.ContextMenu>
                 <ContextMenu FontSize="11" Style="{DynamicResource ContextMenuBaseStyle}">
-                    <MenuItem
-                     Margin="0"
-                     Command="{catel:CommandManagerBinding Application.OpenFile}"
-                     CommandParameter="{Binding SelectedItem}"
-                     Header="Open"
-                     />
+                    <MenuItem Header="File">
+                        <MenuItem
+                         Command="{catel:CommandManagerBinding Application.OpenFile}"
+                         CommandParameter="{Binding SelectedItem}"
+                         Header="Open"
+                         />
+                        <MenuItem Command="{Binding CopyFileCommand}" Header="Copy" />
+                        <MenuItem Command="{Binding PasteFileCommand}" Header="Paste" />
+                        <MenuItem Command="{Binding DeleteFileCommand}" Header="Delete" />
+                        <MenuItem Command="{Binding RenameFileCommand}" Header="Rename" />
+                    </MenuItem>
+
                     <Separator Margin="-15" />
 
                     <MenuItem Margin="0" Header="Actions">
@@ -815,6 +821,8 @@
                         <MenuItem Command="{Binding AddAllImportsCommand}" Header="Add all dependencies" />
                         <MenuItem Command="{Binding FastRenderCommand}" Header="Fast render" />
                     </MenuItem>
+                    <MenuItem Header="Export selected - Simple" />
+                    <MenuItem Header="Export selected - Advanced" />
 
                     <MenuItem Header="Export">
                         <MenuItem Click="MenuItem_Click_2" Header="Wem" />
@@ -825,10 +833,7 @@
                     </MenuItem>
 
                     <Separator Margin="-15" />
-                    <MenuItem Command="{Binding CopyFileCommand}" Header="Copy" />
-                    <MenuItem Command="{Binding PasteFileCommand}" Header="Paste" />
-                    <MenuItem Command="{Binding DeleteFileCommand}" Header="Delete" />
-                    <MenuItem Command="{Binding RenameFileCommand}" Header="Rename" />
+
                     <Separator Margin="-15" />
                     <MenuItem Command="{Binding CopyRelPathCommand}" Header="Copy relative path" />
                     <MenuItem Command="{Binding OpenInFileExplorerCommand}" Header="Open in File Explorer" />
